# BlackWell-API-Rewrite

./: Cargo.toml  README.md
src/: main.rs
src/core/: mod.rs  ratelimiter.rs  schemas.rs  systems.rs
src/core/db/: mod.rs  schemas.rs
src/core/gateway/: requirements.txt
src/core/gateway/src/: gateway.py  main.py
src/core/gateway/src/wrapper/: api.py
